--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 }
 header{
     height: 65px;
-    width: 100%;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -222,13 +222,12 @@ to{
 /*Hero*/
 
 .Hero{
-    padding: 70px 100px 20px 100px;
+    padding: 80px 100px 20px 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 100vh;
     width: 100%;
-    padding-top: 80px;
     background-image: linear-gradient(30deg,rgb(102, 46, 0) 35%,rgb(216, 141, 0),orange);
     background-size: cover;
     background-repeat: no-repeat;
@@ -277,6 +276,7 @@ to{
     box-shadow: 1px 2px 10px rgb(87, 54, 2);
 }
 .buttons{
+    width: fit-content;
     margin-top: 20px;
     display: flex;
     column-gap: 10px;
@@ -308,7 +308,7 @@ to{
 /*CATERGORY*/
 .catergory{
     padding: 0px 0 20px 0;
-    height: 90vh;
+    height: fit-content;
     width: 100%;
     background: radial-gradient(rgb(255, 255, 255),rgb(255, 246, 220));
     background-repeat: no-repeat;
@@ -327,15 +327,17 @@ to{
    padding: 20px;
 }
 .heading h1{
-    font-size: 50px;
+    font-size: 40px;
+    color: var(--brown-2);
 }
 .heading .bar{
     position: absolute;
 }
 .category-objects{
-    height: 700px;
+    height: 400px;
     width: 100%;
     display: flex;
+    padding: 0 20px;
     justify-content: center;
     align-items: center;
     column-gap: 40px;
@@ -344,29 +346,41 @@ to{
     height: 100%;
     width: 300px;
     border-radius: 50px 50px 0 0;
-    box-shadow: 1px 2px 6px var(--beep-brown);
+    box-shadow: 1px 2px 10px rgba(95, 48, 6, 0.38);
     display: flex;
     flex-direction: column;
     align-items: center;
     cursor: pointer;
+    transition: all 0.5s ease-in;
 }
+.category-objects-box:hover{
+    transform: scale(1.1);
+    z-index: 50;
+    box-shadow: 3px 5px 19px var(--beep-brown);
+    border-radius: 50px 50px 0 0;
+}
+
 .category-objects-box p{
     line-height: 60px;
-    padding: 20px;
-    height: 30%;
+    padding: 5px;
     width: 100%;
-    font-family: var(--Mon-xtr-bold);
-    font-size: 30px;
+    font-family: var(--Mon);
+    font-weight: 700;
+    font-size: 20px;
     color:  white;
     background: var(--gradient-color-1);
     text-align: center;
 }
 .category-objects-box div{
     width: 100%;
-    height: calc(700px - 30%);
+    height: 100%;
+    z-index: 20;
+    display: flex;
+    justify-content: center;
     border-radius: 50px 50px 0 0;
     transition: all 0.5s ease-in;
 }
+
 .one{
     z-index: 200;
     background-image: url(img/img-2.jfif);
@@ -382,6 +396,8 @@ to{
 }
 .two img{
     width: 95%;
+    object-fit: contain;
+    object-position: center;
 }
 .three{
     z-index: 200;
@@ -391,8 +407,11 @@ to{
 }
 
 .catergory button{
-    padding: 20px 30px;
+    padding: 15px 35px;
+    border-radius: 50px;
     background-color: orange;
+    color: var(--beep-brown);
+    font-size: 20px;
     border: none;
     cursor: pointer;
 }
@@ -406,37 +425,10 @@ to{
     align-items: center;
 }
 
-.Animation div{
-    border: 2px solid black;
-    height: 90px;
-    width: 90px;
-    animation: rotate;
-    animation-duration: 2s;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-}
-
-
-@keyframes rotate{
-    0%{
-        transform: rotateX(0) rotateY(0) rotateZ(0);
-    }
-    30%{
-        transform: rotateX(180deg) rotateY(0) rotateZ(0);
-    }
-    50%{
-        transform: rotateX(180deg) rotateY(180deg) rotateZ(0deg);
-    }
-    100%{
-        transform: rotateX(180deg) rotateY(180deg) rotateZ(180deg);
-    }
-}
-
 footer{
     height: 60%;
     width: 100%;
     background: linear-gradient(100deg, rgb(48, 11, 0) 70%,rgb(77, 35, 0));
-    padding-top: 20px;
     padding-bottom: 0;
     display: flex;
     flex-direction: column;
@@ -447,7 +439,7 @@ footer .div{
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 0 50px;
+    padding: 15px 50px;
 }
 
 .div ul{
@@ -510,4 +502,80 @@ footer .div{
     text-align: center;
     font-family: var(--Mon);
     font-size: 11px;
+}
+
+@media (max-width: 720px) {
+    /*Navigation Bar*/
+    .nav{
+        display: none;
+    }
+
+
+    /*Hero Section*/
+    .Hero{
+        flex-direction: column;
+        justify-content: center;
+        gap: 20px;
+        width: 100%;
+        padding: 90px 2px 60px 2px;
+        height: fit-content;
+    }
+
+    .text h3{
+        text-align: center;
+        font-size: 40px;
+        line-height: 60px;
+    }
+    .text h3 span{
+        text-align: center;
+        padding: 10px;
+        background-color: white;
+        color: var(--beep-brown);
+        font-size: 30pt;
+        font-family: var(--Mon-Italic);
+
+    }
+    .text .para{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        line-height: 20px;
+    }
+    .hero-text-img{
+        width: 250px;
+        height: 250px;
+    }
+
+    /*Category*/
+    .heading h1{
+        font-size: 30px;
+        color: var(--brown-2);
+    }
+
+    .category-objects{
+        padding: 0px 205px;
+        flex-direction: column;
+        gap: 17px;
+        height: fit-content;
+        /*height: 400px;*/
+        /*width: 100%;*/
+        /*display: flex;*/
+        /*justify-content: center;*/
+        /*align-items: center;*/
+        /*column-gap: 40px;*/
+    }
+
+    .category-objects-box{
+        height: 275px;
+        width: 260px;
+    }
+    .two img{
+        width: 70%;
+    }
+
+    footer .div{
+        padding: 10px 20px;
+    }
 }
